--- a/AdminWindow.xaml
+++ b/AdminWindow.xaml
@@ -55,6 +55,14 @@
                 </TabItem.Header>
                 <Grid Background="#6D8A96">
                     <DataGrid Name="data_grid_competence" Margin="400,10,10,10"></DataGrid>
+                    <TextBox x:Name="search_competence" Background="White"  Width="200" Height="30" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="100 10 20 20"  CaretBrush="Black" />
+                    <Button Click="Button_Click_Search_Competence" Margin="100 60 20 20" VerticalAlignment="Top" HorizontalAlignment="Left"  BorderBrush="Black" Width="200" Foreground="White" Content="Поиск" Background="#8797B2" />
+                    <Button Content="🗘" Height="30" Width="50" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="340 10 20 20" BorderBrush="Black" Background="#8797B2" Click="Button_Click_Update_Table_Competence"/>
+                    <Button Click="Button_Click_Add_Competence" Margin="100 110 20 20" VerticalAlignment="Top" HorizontalAlignment="Left"  BorderBrush="Black" Width="200" Foreground="White" Content="Добавление" Background="#8797B2" />
+                    <Button Click="Button_Click_Update_Competence" Margin="100 160 20 20" VerticalAlignment="Top" HorizontalAlignment="Left"  BorderBrush="Black" Width="200" Foreground="White" Content="Изменение" Background="#8797B2" />
+                    <Button Click="Button_Click_Delete_Competence" Margin="100 210 20 20" VerticalAlignment="Top" HorizontalAlignment="Left"  BorderBrush="Black" Width="200" Foreground="White" Content="Удаление" Background="#8797B2" />
+                    <Button Click="Button_Click_Excel_Competence" Margin="100 260 20 20" VerticalAlignment="Top" HorizontalAlignment="Left"  BorderBrush="Black" Width="200" Foreground="White" Content="Составить отчет" Background="#8797B2" />
+                    <Button Click="Button_Click_Sort_Competence" Margin="100 310 20 20" VerticalAlignment="Top" HorizontalAlignment="Left"  BorderBrush="Black" Width="200" Foreground="White" Content="Компе-ции по типу обучения" FontSize="12" Background="#8797B2" />
                 </Grid>
             </TabItem>
         </TabControl>
