--- a/UpdateCompetence.xaml
+++ b/UpdateCompetence.xaml
@@ -5,8 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TestProga"
         mc:Ignorable="d"
-        Title="UpdateCompetence" Height="450" Width="800">
-    <Grid>
-        
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        Title="Изменение" Height="320" Width="900" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+    <Grid  Background="#6D8A96">
+        <DataGrid Name="datagrid_types" AutoGenerateColumns="True" Width="600" Height="200" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,20,20,0"/>
+        <TextBox x:Name ="id_tb"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20 20 20 20" Width="200" Height="40"  materialDesign:HintAssist.Hint="Введите код" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Foreground="White" Cursor="Arrow" CaretBrush="White" SelectionBrush="White"  BorderBrush="#89FFFFFF"/>
+        <TextBox x:Name ="name_tb"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20 60 20 20" Width="200" Height="40"  materialDesign:HintAssist.Hint="Введите наименование компетенции" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Foreground="White" Cursor="Arrow" CaretBrush="White" SelectionBrush="White"  BorderBrush="#89FFFFFF"/>
+        <TextBox x:Name ="id_type_tb"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20 100 20 20" Width="200" Height="40"  materialDesign:HintAssist.Hint="Введите код типа обучения" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Foreground="White" Cursor="Arrow" CaretBrush="White" SelectionBrush="White"  BorderBrush="#89FFFFFF"/>
+        <Button Click="Button_Click_Add" Margin="20 160 20 20" VerticalAlignment="Top" HorizontalAlignment="Left"  BorderBrush="Black" Width="200" Foreground="White" Content="Изменить" Background="#8797B2" />
+        <Button Click="Button_Click_Back" Margin="20 220 20 20" VerticalAlignment="Top" HorizontalAlignment="Left"  BorderBrush="Black" Width="200" Foreground="White" Content="Назад" Background="#8797B2" />
     </Grid>
 </Window>
