--- a/UpdateCourses.xaml
+++ b/UpdateCourses.xaml
@@ -6,17 +6,19 @@
         xmlns:local="clr-namespace:TestProga"
         mc:Ignorable="d"
          xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="Изменить" Height="500" Width="900" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Изменить" Height="720" Width="900" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid Background="#6D8A96">
         <DataGrid Name="datagrid_times" AutoGenerateColumns="True" Width="600" Height="200" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,20,20,0"/>
         <DataGrid Name ="datagrid_competence" AutoGenerateColumns="True" Width="600" Height="200" Margin="0,240,20,0" VerticalAlignment="Top" HorizontalAlignment="Right"/>
+        <DataGrid Name ="datagrid_teachers" AutoGenerateColumns="True" Width="600" Height="200" Margin="0,460,20,0" VerticalAlignment="Top" HorizontalAlignment="Right"/>
         <TextBox x:Name ="id_tb"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20 20 20 20" Width="200" Height="40"  materialDesign:HintAssist.Hint="Введите код" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Foreground="White" Cursor="Arrow" CaretBrush="White" SelectionBrush="White"  BorderBrush="#89FFFFFF"/>
         <TextBox x:Name ="moodle_tb"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20 60 20 20" Width="200" Height="40"  materialDesign:HintAssist.Hint="Введите ссылку на курс Moodle" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Foreground="White" Cursor="Arrow" CaretBrush="White" SelectionBrush="White"  BorderBrush="#89FFFFFF"/>
         <TextBox x:Name ="id_competence_tb" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20 100 20 20" Width="200" Height="40"  materialDesign:HintAssist.Hint="Введите код компетенцмм" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Foreground="White" Cursor="Arrow" CaretBrush="White" SelectionBrush="White"  BorderBrush="#89FFFFFF"/>
         <TextBox x:Name ="id_time_tb"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20 140 20 20" Width="200" Height="40"  materialDesign:HintAssist.Hint="Введите код времени" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Foreground="White" Cursor="Arrow" CaretBrush="White" SelectionBrush="White"  BorderBrush="#89FFFFFF"/>
         <DatePicker x:Name ="date_start_tb" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20 180 20 20" Width="200" Height="40"  materialDesign:HintAssist.Hint="Введите дату начала"  Foreground="White" Cursor="Arrow"   BorderBrush="#89FFFFFF"/>
         <DatePicker x:Name ="date_end_tb" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20 220 20 20" Width="200" Height="40"  materialDesign:HintAssist.Hint="Введите дату окончания"  Foreground="White" Cursor="Arrow"  BorderBrush="#89FFFFFF"/>
-        <Button Click="Button_Click_Update" Margin="20 280 20 20" VerticalAlignment="Top" HorizontalAlignment="Left"  BorderBrush="Black" Width="200" Foreground="White" Content="Изменить" Background="#8797B2" />
-        <Button Click="Button_Click_Back" Margin="20 340 20 20" VerticalAlignment="Top" HorizontalAlignment="Left"  BorderBrush="Black" Width="200" Foreground="White" Content="Назад" Background="#8797B2" />
+        <TextBox x:Name ="id_teacher"  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20 260 20 20" Width="200" Height="40"  materialDesign:HintAssist.Hint="Введите код учителя" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Foreground="White" Cursor="Arrow" CaretBrush="White" SelectionBrush="White"  BorderBrush="#89FFFFFF"/>
+        <Button Click="Button_Click_Update" Margin="20 320 20 20" VerticalAlignment="Top" HorizontalAlignment="Left"  BorderBrush="Black" Width="200" Foreground="White" Content="Изменить" Background="#8797B2" />
+        <Button Click="Button_Click_Back" Margin="20 380 20 20" VerticalAlignment="Top" HorizontalAlignment="Left"  BorderBrush="Black" Width="200" Foreground="White" Content="Назад" Background="#8797B2" />
     </Grid>
 </Window>
